--- a/templates/WebsiteEyeDoctor.html
+++ b/templates/WebsiteEyeDoctor.html
@@ -1,8 +1,9 @@
 <html>
 <body>
 <h1>Diabetic Retinopathy Predictor</h1>
-<form method = "POST">
-<input type="text" name="x" placeholder="Fill in your data here...">
+<form method = "POST" enctype="multipart/form-data">
+<input type="submit" name="butTrain" value="Train">
+<input type="file" id="file" name="file" accept="image/*">
 <br>
 <input type="submit" name="button" value="Predict">
 </form>
